Added Dropdown Feature for navigation bar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,22 @@
                     <a href="#team" class="nav_links" id="personal_info">Team</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#it_tech" class="nav_links" id="it_tech">IT Tech</a>
+                    <div class="dropdown" data-dropdown>
+                        <a href="#it_tech" class="nav_links" id="it_tech" data-dropdown-link>IT Tech</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="">AI</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="">Cloud Computing</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="">Crpto and Blockchain</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </li>
                 <li class="nav_items">
                     <a href="#project" class="nav_links" id="project">Project</a>
