Added more links to dropdown menu

--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
                         <div class="dropdown-menu">
                             <ul class="dropdown-content">
                                 <li class="dropdown-item">
-                                    <a class="dropdown-links" href="">AI</a>
+                                    <a class="dropdown-links" href="">AI </a>
                                 </li>    
                                 <li class="dropdown-item">
                                     <a class="dropdown-links" href="">Cloud Computing</a>
                                 </li>    
                                 <li class="dropdown-item">
-                                    <a class="dropdown-links" href="">Crpto and Blockchain</a>
+                                    <a class="dropdown-links" href="">Crptocurrencies</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="">Robots</a>
                                 </li>
                             </ul>
                         </div>
