--- a/index.html
+++ b/index.html
@@ -62,11 +62,16 @@
             <div class="cards">
                 <h2>Thang</h2>
                 <div class="info-wrapper">
-                    <p class="backgroun-info">Nationality: Vietnamese</p>
-                    <p class="backgroun-info">Education: Freshman</p>
-                    <p class="backgroun-info">Spoken Languages: Vietnamese and Mandarin</p>
-                    <p class="backgroun-info">Intersing Fact: Like to play badminton</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit, accusantium quisquam soluta nemo distinctio porro velit, ut eius repellendus iusto maxime id nobis, fugiat deleniti fugit possimus voluptatem aut. Officia.</p>
+                    <p class="backgroun-info"><strong>Student Number:</strong> S3925968</p>
+                    <p class="backgroun-info"><strong>Nationality:</strong> Vietnamese</p>
+                    <p class="backgroun-info"><strong>Education:</strong> Freshman</p>
+                    <p class="backgroun-info"><strong>Spoken Languages:</strong> Vietnamese, English, and a bit of Mandarin</p>
+                    <p class="backgroun-info"><strong>Intersing Fact:</strong> I usually play badminton in my spare time or on the weekend 
+                        with my siblings. I got introduced to playing badminton by my grandfather in 6th grade. 
+                        I have played badminton on and off ever since. All my experience from badminton comes from  
+                        just playing it with my friends at school and watching my grandfather since he is very good at 
+                        the sport. I would say that I am average or above at best.</p>
+
                 </div>
             </div>
             <div class="cards">
