Bao Minh fixed img src index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <p style="padding-top:55px;line-height:30px;" class="backgroun-info">Student number: s3926080</p>
                     <p class="backgroun-info">School email address: s3926080@rmit.edu.vn</p>
                     <p style="line-height:30px;" class="backgroun-info">Background: I’m Vietnamese, I’m currently a first year at RMIT university. I would say I am a competitive person so I enjoy playing competitive shooter games with friends in my free time. I used to attend Nguyen Sieu highschool. There, I partook in the IGCSE program for 2 years which taught me a great amount about enterprise, travel and tourism and global perspectives. I am currently a member of team IT Hub, consisting of me, Tran Viet Hoang, Tran Duc Thang and Le Nhat Quang.</p>
-                    <img src="Images/Bazinga.jpg" alt="Bao Minh photo" width="130"  height="180" style="position:relative; left:380px; bottom:440px">
+                    <img src="Images/Bao Minh.jpg" alt="Bao Minh photo" width="130"  height="180" style="position:relative; left:380px; bottom:440px">
             </div>
             <div class="cards">
                 <h2>Nhat</h2>
