--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
             </div>
             <div class="cards">
                 <h2>Hoang</h2>
+                <p style="padding-top:55px;line-height:30px;" class="backgroun-info">Student number: s3928141</p>
+                <p class="backgroun-info">School email address: s3928141@rmit.edu.vn</p>
+                <p style="line-height:30px;" class="backgroun-info">Background: I’m Vietnamese </p>
+                <p class="backgroun-info">Interesting Fact: I like to play basketball and videogames</p>
             </div>
         </div>
     </div>
