Isn't fixed. Cleaned some stuff.

--- a/IT_Tech.html
+++ b/IT_Tech.html
@@ -43,25 +43,25 @@
         <div class="wrapper">
             <div class="cards">
                 <div class="info-wrapper">
-                    <center><h2 id="theHeader">AI and Machine Learning</h2></center>
+                    <h2 id="theHeader">AI and Machine Learning</h2>
                     <a href="AI.html"<center><img  src="Images/AI and machine learning.jpg" alt="AI and machine learning" style="width: 515px; height:300px;"></center>
                     </a>    
                     
                 </div>
             </div>
             <div class="cards">
-                <center><h2 id="theHeader">Cloud Computing</h2></center>
+                <h2 id="theHeader">Cloud Computing</h2>
                 <a href="Cloud_computing.html" <center><img  src="Images/Cloud computing.jpg" alt="Cloud computing" style="width: 515px; height:300px;"></center>
                 </a>
             </div>
             <div class="cards">
-                <center><h2 id="theHeader">Crypto Currencies and Blockchain</h2></center>
+                <h2 id="theHeader">Crypto Currencies and Blockchain</h2>
                 <a href="Crypto.html" <center><img  src="Images/Crypto currencies and blockchain.jpeg" alt="Crypto" style="width: 515px; height:300px;"></center>
                 </a>
             </div>
             <div class="cards">
                 <h2 id="theHeader">Robots</h2>
-                <a href="Robots.html" <center><img  src="Images/Robots.jpg" alt="Robots" style="width: 515px; height:300px;"></center>
+                <a href="Robots.html" <center><img id="illuImg" src="Images/Robots.jpg" alt="Robots" style="width: 515px; height:300px;"></center>
                 </a>
             </div>
         </div>
