--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                 <p style="padding-top:55px;line-height:30px;" class="backgroun-info">Student number: s3928141</p>
                 <p class="backgroun-info">School email address: s3928141@rmit.edu.vn</p>
                 <p style="line-height:30px;" class="backgroun-info">Background: I’m Vietnamese </p>
-                <p class="backgroun-info">Interesting Fact: I like to play basketball and videogames</p>
+                <p class="backgroun-info">Interesting Fact: One of my fascinating characteristics is that I enjoy playing basketball a lot. For example, when I was in high school, I would spend hours after school with my buddies playing basketball, but when I started university, I couldn't really practice this activity because of the pandemic, and I couldn't find a decent court to play on. Moreover, most of my previous partners were now playing with their new colleagues in university and didn't have as much time to play as we had in high school.
+</p>
             </div>
         </div>
     </div>
