--- a/IT_Tech.html
+++ b/IT_Tech.html
@@ -66,7 +66,7 @@
             </div>
         </div>
     </div>
-    <script src="IT_Tech_Script.js"></script>
+    <!-- <script src="IT_Tech_Script.js"></script> -->
 
 </body>
 </html>
